# linkml-map

./: .gitignore  .pre-commit-config.yaml  .tmp_repro.py  404.html  AGENTS.md  CLAUDE.md  Makefile  README.md  about.yaml  biosample-schema.yaml  index.html  mixs-exclusion-template.yaml  mixs-exclusion.Makefile  mkdocs.yml  objects.inv  project.Makefile  pyproject.toml  search.html  sitemap.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ai-controllers.json  copilot-setup-steps.yml
.github/workflows/: claude-issue-summarize.yml  claude-issue-triage.yml  claude.yml  codespell.yml  deploy_documentation.yml  dragon-ai.yml  main.yaml  pypi-publish.yaml
AliasedClass/: index.html
Any/: index.html
Boolean/: index.html
ClassDerivation/: index.html
ClassReference/: index.html
CollectionType/: index.html
CopyDirective/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
ElementDerivation/: index.html
EnumDerivation/: index.html
EnumReference/: index.html
Float/: index.html
Integer/: index.html
Inverse/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
KeyVal/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PermissibleValueDerivation/: index.html
PrefixDerivation/: index.html
SerializationSyntaxType/: index.html
SlotDerivation/: index.html
SlotReference/: index.html
Sparqlpath/: index.html
SpecificationComponent/: index.html
String/: index.html
StringificationConfiguration/: index.html
Time/: index.html
TransformationSpecification/: index.html
UnitConversionConfiguration/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
add/: index.html
alias/: index.html
api/compiler/: index.html
api/expressions/: index.html
api/extensions/: index.html
api/functions/: index.html
api/inference/: index.html
api/session/: index.html
api/transformer/: index.html
cast_collection_as/: index.html
class_derivations/: index.html
class_name/: index.html
class_named/: index.html
comments/: index.html
copy_all/: index.html
copy_directives/: index.html
datamodel/: index.html
delimiter/: index.html
derived_from/: index.html
description/: index.html
dictionary_key/: index.html
docs/: faq.md  index.md
docs/api/: compiler.md  expressions.md  extensions.md  functions.md  inference.md  transformer.md
docs/examples/: MetamodelMapping.ipynb  Tutorial-SQLCompiler.ipynb  Tutorial.ipynb  biolink-subsetting.ipynb  denormalizing.ipynb
docs/schema/: Agent.md  AggregationOperation.md  AggregationType.md  AliasedClass.md  Any.md  Boolean.md  ClassDerivation.md  ClassReference.md  CollectionType.md  CopyDirective.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  ElementDerivation.md  EnumDerivation.md  EnumReference.md  Float.md  GroupingOperation.md  Integer.md  InvalidValueHandlingStrategy.md  Inverse.md  Jsonpath.md  Jsonpointer.md  KeyVal.md  Ncname.md  Nodeidentifier.md  ObjectDerivation.md  Objectidentifier.md  Offset.md  Organization.md  PermissibleValueDerivation.md  Person.md  PivotDirectionType.md  PivotOperation.md  PrefixDerivation.md  SchemaReference.md  SerializationSyntaxType.md  (+127 more)
docs/specification/: compliance.md
element_name/: index.html
enum_derivations/: index.html
examples/MetamodelMapping/: index.html
examples/Tutorial/: index.html
examples/Tutorial-SQLCompiler/: index.html
examples/biolink-subsetting/: index.html
examples/denormalizing/: index.html
exclude/: index.html
exclude_all/: index.html
expr/: index.html
expression_to_expression_mappings/: index.html
expression_to_value_mappings/: index.html
faq/: index.html
hide/: index.html
id/: index.html
implements/: index.html
include/: index.html
inverse_of/: index.html
is_a/: index.html
joins/: index.html
key/: index.html
linkml-map/: index.html
mirror_source/: index.html
mixins/: index.html
name/: index.html
notebooks/: MetamodelMapping.ipynb  Tutorial-SQLCompiler.ipynb  Tutorial.ipynb
over_slots/: index.html
overrides/: index.html
overview/: index.html
permissible_value_derivations/: index.html
populated_from/: index.html
prefixes/: index.html
range/: index.html
reversed/: index.html
same_as/: index.html
schema/: index.html
schema/Agent/: index.html
schema/AggregationOperation/: index.html
schema/AggregationType/: index.html
schema/AliasedClass/: index.html
schema/Any/: index.html
schema/Boolean/: index.html
schema/ClassDerivation/: index.html
schema/ClassReference/: index.html
schema/CollectionType/: index.html
schema/CopyDirective/: index.html
schema/Curie/: index.html
schema/Date/: index.html
schema/DateOrDatetime/: index.html
schema/Datetime/: index.html
schema/Decimal/: index.html
schema/Double/: index.html
schema/ElementDerivation/: index.html
schema/EnumDerivation/: index.html
schema/EnumReference/: index.html
schema/Float/: index.html
schema/GroupingOperation/: index.html
schema/Integer/: index.html
schema/Inverse/: index.html
search/: search_index.json
slot_derivations/: index.html
slot_name/: index.html
source_magnitude_slot/: index.html
source_schema/: index.html
source_unit/: index.html
source_unit_scheme/: index.html
source_unit_slot/: index.html
sources/: index.html
stringification/: index.html
syntax/: index.html
target_magnitude_slot/: index.html
target_schema/: index.html
target_unit/: index.html
target_unit_scheme/: index.html
target_unit_slot/: index.html
tests/: README.md  __init__.py  conftest.py  test_datamodel.py  test_denorm_object_transformer.py  test_deprecations.py  test_linkml_transformer.py  test_object_transformer.py  test_strictdict.py  test_upstream_canaries.py  test_validator.py
title/: index.html
transformer/: index.html
type_designator/: index.html
types/: index.html
unit_conversion/: index.html
value/: index.html
value_mappings/: index.html
(+388 files in other folders)
