[project]
name = "linkml-map"
description = "a framework for specifying and executing mappings between data models"
readme = "README.md"
authors = [
    {name = "cmungall", email = "cjm@berkeleybop.org"},
]
requires-python = "<=3.13,>=3.9"
dynamic = [ "version" ]

dependencies = [
    "asteval>=1.0.5",
    "click>=8",
    "curies",
    "deepdiff>=6.0",
    "duckdb>=1.1.0",
    "flatten-dict>=0.4.2",
    "graphviz>=0.20",
    "jinja2>=3",
    "lark>=1",
    "linkml-runtime>=1.9.1",
    "more-itertools>=10.0.0",
    "pint>=0.20",
    "pydantic>=2,<3",
    "pyyaml",
    "simpleeval>=1.0.3",
    "ucumvert>=0.2",
]

[dependency-groups]
dev = [
    "deepdiff>=6.0",
    "deptry>=0.23",
    "jupyter>=1.1",
    "linkml>=1.8.7",
    "mkdocs-mermaid2-plugin>=0.6",
    "mkdocs-windmill",
    "mkdocstrings[crystal,python]",
    "mknotebooks>=0.8",
    "pre-commit>=4.3.0",
    "pytest>=8",
    "ruff>=0.11",
    "tox>=4",
]

[project.scripts]
linkml-map = "linkml_map.cli.cli:main"

[tool.deptry]
known_first_party = ["linkml_map"]
extend_exclude = ["docs"]

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"


# Ref: https://github.com/codespell-project/codespell#using-a-config-file
[tool.codespell]
skip = '.git,*.pdf,*.svg,go.sum,*.lock'
check-hidden = true
ignore-regex = '(^\s*"image/\S+": ".*|\b(KEGG.BRITE|mor.nlm.nih.gov)\b)'
ignore-words-list = 'infarction,amination,assertIn,brite,ehr,mor,brite,nin,mirgate'

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "docs/",
    "src/linkml_map/datamodel",
    "tests/input",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

ignore = [
    # UP007: non-pep604-annotation-union - requires Python 3.10+
    "UP007",
    # UP038: non-pep604-isinstance - requires Python 3.10+
    "UP038",
    # E203: whitespace before ',', ';', or ':'
    "E203",
]

[tool.ruff.lint.isort]
known-first-party = ["linkml_map"]
